--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "del -f build && cd ../part2/phonebook && npm run build --prod && copy -r build ../../part3",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Harun Mohamed",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "morgan": "^1.10.0"
   },
