--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "del -f build && cd ../part2/phonebook && npm run build --prod && copy -r build ../../part3",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "Harun Mohamed",
@@ -17,8 +17,11 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.3.0",
+    "morgan": "^1.10.0",
+    "node": "^17.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
