--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -10,7 +10,8 @@
     "build:ui": "del -f build && cd ../part2/phonebook && npm run build --prod && copy -r build ../../part3",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "Harun Mohamed",
   "license": "MIT",
@@ -24,6 +25,12 @@
     "node": "^17.7.2"
   },
   "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "nodemon": "^2.0.15"
   }
 }
