--- a/part4/package.json
+++ b/part4/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "Harun Mohamed",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^28.0.3",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
@@ -20,5 +21,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0"
+  },
+  "jest": {
+    "testEnviroment": "node"
   }
 }
