--- a/part4/package.json
+++ b/part4/package.json
@@ -19,10 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0"
   },
   "jest": {
-    "testEnviroment": "node"
+    "testEnvironment": "node"
   }
 }
